# OOP-Labs

./: README.md
Lab_01/: CMakeLists.txt  gcd.cpp  gcd.h  main.cpp  tests.cpp
Lab_02/: CMakeLists.txt  Hex.cpp  Hex.hpp  main.cpp  tests.cpp
Lab_02/src/: Hex.cpp
Lab_02/test/: tests.cpp
Lab_03/: CMakeLists.txt  main.cpp
Lab_03/headers/: Array.hpp  Figure.hpp  Octagon.hpp  Point.hpp  Square.hpp  Triangle.hpp
Lab_03/src/: Array.cpp  Figure.cpp  Octagon.cpp  Point.cpp  Square.cpp  Triangle.cpp
Lab_03/test/: tests.cpp
Lab_04/: CMakeLists.txt  main.cpp
Lab_04/headers/: Array.hpp  Figure.hpp  Octagon.hpp  Point.hpp  Square.hpp  Triangle.hpp
Lab_04/test/: test.cpp
Lab_05/: CMakeLists.txt  main.cpp
Lab_05/headers/: Allocator.hpp  ConstIterator.hpp  Iterator.hpp  Vector.hpp
Lab_05/tests/: tests.cpp
Lab_06/: CMakeLists.txt  main.cpp
Lab_06/headers/: DataMethods.hpp  Druid.hpp  Factory.hpp  NPC.hpp  Orc.hpp  Slaver.hpp
Lab_06/src/: DataMethods.cpp  Druid.cpp  Factory.cpp  NPC.cpp  Observers.cpp  Orc.cpp  Slaver.cpp
Lab_06/tests/: tests.cpp
Lab_07/: CMakeLists.txt  main.cpp
Lab_07/headers/: DataMethods.hpp  Druid.hpp  Factory.hpp  FightManager.hpp  NPC.hpp  Orc.hpp  Slaver.hpp
Lab_07/src/: DataMethods.cpp  Druid.cpp  Factory.cpp  FightManager.cpp  NPC.cpp  Observers.cpp  Orc.cpp  Slaver.cpp
Lab_07/tests/: tests.cpp
